# Iki_Scraper

./: .gitignore  ARTICLE.MD  README.MD  examples.py  pyproject.toml
src/Iki_Scraper/: __init__.py  app.py  config.py  facade.py
src/Iki_Scraper/core/: __init__.py  browser_session.py  orchestrator.py  standard_scraper.py
src/Iki_Scraper/infrastructure/: __init__.py  context_factory.py  domain_rate_limiter.py  human_behavior.py  proxy_manager.py  sitemap_discovery.py  url_loader.py
src/Iki_Scraper/patterns/: __init__.py  base_scraper.py  change_detector.py  checkpoint.py  logger.py  observer.py  parse_strategy.py  repository.py  retry_policy.py
src/iki_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_integration.py  test_patterns.py  test_unit.py
